@@ -1,2 +1,2 @@
-#Mon Feb 15 13:36:29 JST 2021
-gradle.version=6.3
+#Sat Mar 20 11:28:12 JST 2021
+gradle.version=6.4.1
