@@ -2,6 +2,7 @@
   <library name="Gradle: org.hamcrest:hamcrest-core:1.3">
     <CLASSES>
       <root url="jar://$MAVEN_REPOSITORY$/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar!/" />
+      <root url="jar://$USER_HOME$/.gradle/caches/modules-2/files-2.1/org.hamcrest/hamcrest-core/1.3/42a25dc3219429f0e5d060061f71acb49bf010a0/hamcrest-core-1.3.jar!/" />
     </CLASSES>
     <JAVADOC />
     <SOURCES>
